add of multiple fields in place and city, prototype